test/compilable/extra-files/pkg_import3a/package.d
module pkg_import3a;

int foo() { return 1; }
int bar() { return 2; }
